<resources>

    <string name="app_name">PhotoGallery</string>
    <string name="send_request">Search</string>
    <string name="user_name">Ivan</string>

    <string name="albums">Albums</string>
    <string name="settings">Settings</string>
    <string name="office">Private office</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="search_hint">input text</string>
    <string name="search_title">search_title</string>
    <string name="about">About</string>

    <string name="text_in_about_ativity"> PhotoGallery is a program, that can help you to find photos by tags from flickr.com. \n To start using this
    application you should just go to main activity and enter your tag and you will get all photos from flickr with this tag. \n If you want to
    contact me, send letter to my e-mail:\n van.emelin2012@yandex.ru.</string>

</resources>