<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/albums"/>
        <item
            android:id="@+id/nav_office"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/office"/>
    </group>
    <item android:title="@string/support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/settings"/>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@android:drawable/ic_menu_more"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>